Divide offer section into two divs in new branch

--- a/index.html
+++ b/index.html
@@ -96,16 +96,17 @@
         
         <section class="l-section l-section--offer">
             <div></div>
-            <div></div>
-            <div class="l-section__content-wrapper">
-                <h2 class="heading__title heading__title--white">Just relax <span class="green-text">&</span> <br> let us do the heavy lifting</h2>
-                <p class="heading__subtitle heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
-                <ul class="list">
-                    <li class="list__item">Initial Setup & Customizations</li>
-                    <li class="list__item">Regular Updates</li>
-                    <li class="list__item">Round The Clock Support</li>
-                </ul>
-                <button type="button" class="offer__button button">Learn More</button>
+            <div>
+                <div class="l-section__content-wrapper">
+                    <h2 class="heading__title heading__title--white">Just relax <span class="green-text">&</span> <br> let us do the heavy lifting</h2>
+                    <p class="heading__subtitle heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                    <ul class="list">
+                        <li class="list__item">Initial Setup & Customizations</li>
+                        <li class="list__item">Regular Updates</li>
+                        <li class="list__item">Round The Clock Support</li>
+                    </ul>
+                    <button type="button" class="offer__button button">Learn More</button>
+                </div>
             </div>
         </section>
         
