--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <section class="l-section l-section--background_green">
             <div class="l-section__content-wrapper">
                 <h2 class="heading__title heading__title--white">Ready to talk about your next project?</h2>
-                <button type="button" class="button--rectangle">Contact us</button>
+                <button type="button" class="button--transparent">Contact us</button>
             </div>
         </section>
             
