Add blur filter when menu list is open

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
         </section>
         </main>
-        <footer>
+        <footer class="footer">
             <section class="l-section l-section--background_dark">
             <div class="l-section__content-wrapper">
                     <div class="l-features-wrapper">
