Position project section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="project">
                     <h3 class="heading__title heading__title--subheading">Developing a framework</h3>
                     <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
-                    <div class="l-features-wrapper">
+                    <div class="project__features">
                         <div class="feature feature--inline">
                             <div class="feature__icon">
                                 <div class="feature__icon-circle feature__icon-circle--black">
