--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 </div>
                             </div>
                             <div class="feature__text">
-                                <h4 class="feature__title">E-Commerce Ready</h4>
+                                <h4 class="feature__title feature__title--lowercase">E-Commerce Ready</h4>
                                 <p class="feature__description">Proin iaculis purus consequat sem cure  digni ssim. </p>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                                 </div>
                             </div>
                             <div class="feature__text">
-                                <h4 class="feature__title">Powerful SEO Features</h4>
+                                <h4 class="feature__title feature__title--lowercase">Powerful SEO Features</h4>
                                 <p class="feature__description">Proin iaculis purus consequat sem cure. </p>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
                             <div class="feature__text">
-                                <h4 class="feature__title">Secure Encryption</h4>
+                                <h4 class="feature__title feature__title--lowercase">Secure Encryption</h4>
                                 <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
                             </div>
                         </div>
