Set ipad picture as background for projects section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </section>
         
-        <section class="l-section">
+        <section class="l-section l-section--projects">
             <div class="l-section__content-wrapper">
                 <h2 class="heading__title">Latest Projects</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure </p>
