--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	</head>
 
 	<body>
+        <div id="preloader" class="preloader">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
+           
         <header class="header">
             <div class="header__wrapper">
             <a href="#" title="Top Page">
@@ -337,7 +343,8 @@
                     </a>
                 </div>
             </section>
-        </footer>
+        </footer>        
+        <script src="src/global/preloader.js"></script>
         <script src="src/blocks/button/--menu/button--menu.js"></script>
         <script src="src/blocks/menu/__item/menu__item.js"></script>
 	</body>
