Change response at 1060px

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
-                    <p class="project__link"><span class="green-text">View Details</span>
+                    <p class="project__link"><a href="#"><span class="green-text">View Details</span></a>
                     <img src="img/projects/arrow.svg" alt=""></p>
                 </div>
             </div>
