Adjust margin for each section

--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
         </section>
             
         <section class="l-section l-section--background_green">
-            <div class="l-section__content-wrapper">
+            <div class="l-section__content-wrapper l-section__content-wrapper--small-margin">
                 <h2 class="heading__title heading__title--white">Ready to talk about your next project?</h2>
                 <button type="button" class="button--transparent">Contact us</button>
             </div>
         </section>
             
         <section class="l-section">
-            <div class="l-section__content-wrapper partners">
+            <div class="l-section__content-wrapper l-section__content-wrapper--small-margin partners">
                 <a href="#" title="Envato"><img class="partners__logo" src="img/partners/envato.png" alt="Envato"></a>
                 <a href="#" title="WordPress"><img class="partners__logo" src="img/partners/wordpress.png" alt="WordPress"></a>
                 <a href="#" title="ae tuts+"><img class="partners__logo" src="img/partners/tuts.png" alt="ae tuts+"></a>
@@ -243,7 +243,7 @@
         </main>
         <footer class="footer">
             <section class="l-section l-section--background_dark">
-            <div class="l-section__content-wrapper">
+            <div class="l-section__content-wrapper l-section__content-wrapper--small-margin">
                     <div class="l-features-wrapper">
                     <div class="feature">
                         <h2 class="feature__title">Contact us</h2>
