Position footer items

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     </div>
                 </div>
             </section>
-            <section class="l-section">
+            <section class="l-section l-section--footer">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials__icons">
                     <a href="#" class="socials__icon socials__icon--twitter">
