--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
         </section>
             
         <section class="l-section l-section--background_green">
-            <div class="l-section__content-wrapper l-section__content-wrapper--small-margin">
+            <div class="l-section__content-wrapper l-section__content-wrapper--margin-small">
                 <h2 class="heading__title heading__title--white">Ready to talk about your next project?</h2>
                 <button type="button" class="button--transparent">Contact us</button>
             </div>
         </section>
             
         <section class="l-section">
-            <div class="l-section__content-wrapper l-section__content-wrapper--small-margin partners">
+            <div class="l-section__content-wrapper l-section__content-wrapper--margin-small partners">
                 <a href="#" title="Envato"><img class="partners__logo" src="img/partners/envato.png" alt="Envato"></a>
                 <a href="#" title="WordPress"><img class="partners__logo" src="img/partners/wordpress.png" alt="WordPress"></a>
                 <a href="#" title="ae tuts+"><img class="partners__logo" src="img/partners/tuts.png" alt="ae tuts+"></a>
@@ -243,8 +243,8 @@
         </main>
         <footer class="footer">
             <section class="l-section l-section--background_dark">
-            <div class="l-section__content-wrapper l-section__content-wrapper--small-margin">
-                    <div class="l-features-wrapper">
+            <div class="l-section__content-wrapper l-section__content-wrapper--margin-small">
+                    <div class="l-features-wrapper l-features-wrapper--top-aligned">
                     <div class="feature">
                         <h2 class="feature__title">Contact us</h2>
                         <div class="feature__description">
@@ -327,6 +327,7 @@
                 </div>
             </section>
             <section class="l-section l-section--footer">
+                <div class="l-section__content-wrapper l-section__content-wrapper--margin-xsmall">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials__icons">
                     <a href="#" class="socials__icon socials__icon--twitter">
@@ -341,6 +342,7 @@
                     <a href="#" class="socials__icon socials__icon--google">
                         <img src="img/socials/google.png" alt="google+">
                     </a>
+                </div>
                 </div>
             </section>
         </footer>        
