--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header class="header">
             <div class="header__wrapper">
             <a href="#" title="Top Page">
-            <div class="logo">
+            <div class="header__logo logo">
                 <div class="logo__pic">
                     <img src="img/header/leaf.png" alt="">
                 </div>
