--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 	<body>
         <div id="preloader" class="preloader">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+            <div class="preloader__dot"></div>
+            <div class="preloader__dot"></div>
+            <div class="preloader__dot"></div>
         </div>
            
         <header class="header">
