Rewrite Button block as scss

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <nav class="menu">
                     <button type="button" class="menu__button button--menu button--close" title="Open Menu">
                         <span>Menu</span>
-                         <svg class="button__icon" width="26" height="25" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                            <g class="icon__open" stroke="#777777" stroke-width="3"stroke-linejoin="miter" stroke-linecap="butt" fill="none">
+                         <svg width="26" height="25" xmlns="http://www.w3.org/2000/svg" version="1.1">
+                            <g class="button__icon button__icon--open">
                                 <line x1="12" x2="12" y1="3" y2="20"/>
                                 <polyline points="4 11 12 20 20 11"/>
                             </g>
-                            <g class="icon__close" stroke="#777777"  stroke-width="3" >
+                            <g class="button__icon button__icon--close">
                                 <line x1="3" x2="21" y1="3" y2="21" />
                                 <line x1="3" x2="21" y1="21" y2="3" />
                             </g>
