--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 </div>
                 </a>
                 <nav class="menu">
-                    <button type="button" class="menu__button button--menu button--close" title="Open Menu">
-                        <span>Menu</span>
-                         <svg width="26" height="25" xmlns="http://www.w3.org/2000/svg" version="1.1">
+                    <button type="button" class="menu__button button button--dark button--menu button--close" title="Open Menu">
+                        Menu
+                         <svg class="button__icon-container" width="26" height="25" xmlns="http://www.w3.org/2000/svg" version="1.1">
                             <g class="button__icon button__icon--open">
                                 <line x1="12" x2="12" y1="3" y2="20"/>
                                 <polyline points="4 11 12 20 20 11"/>
