--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <section class="l-section l-section--footer">
                 <div class="l-section__content-wrapper l-section__content-wrapper--margin-xsmall">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
-                <div class="socials__icons">
+                <div class="socials">
                     <a href="#" class="socials__icon socials__icon--twitter">
                         <img src="img/socials/twitter.png" alt="twitter">
                     </a>
