Include icon-circle element in feature block

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
                 <h2 class="heading__title">Latest Projects</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure </p>
                 <div class="project">
-                    <h3 class="heading__title heading__title--subheading">Developing a framework</h3>
-                    <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                    <h3 class="project__title">Developing a framework</h3>
+                    <p class="project__description">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                     <div class="project__features">
                         <div class="feature feature--inline">
                             <div class="feature__icon">
-                                <div class="feature__icon-circle feature__icon-circle--black">
+                                <div class="feature__icon-circle feature__icon-circle--black feature__icon-circle--resizing">
                                 <img src="img/projects/icon-basket.svg" alt="">
                                 </div>
                             </div>
@@ -134,7 +134,7 @@
                         </div>
                         <div class="feature feature--inline">
                             <div class="feature__icon">
-                                <div class="feature__icon-circle feature__icon-circle--black">
+                                <div class="feature__icon-circle feature__icon-circle--black feature__icon-circle--resizing">
                                 <img src="img/projects/icon-laptop.svg" alt="">
                                 </div>
                             </div>
@@ -145,7 +145,7 @@
                         </div>
                         <div class="feature feature--inline">
                             <div class="feature__icon">
-                                <div class="feature__icon-circle feature__icon-circle--black">
+                                <div class="feature__icon-circle feature__icon-circle--black feature__icon-circle--resizing">
                                 <img src="img/projects/icon-locked.svg" alt="">
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                    <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                     <p class="project__link"><a href="#"><span class="green-text">View Details</span></a>
                     <img src="img/projects/arrow.svg" alt=""></p>
                 </div>
@@ -169,7 +169,7 @@
                 <div class="l-features-wrapper">
                     <div class="feature">
                         <div class="feature__icon">
-                            <div class="feature__icon-circle">
+                            <div class="feature__icon-circle feature__icon-circle--with-line">
                             <img class="feature__svg" src="img/values/icon-music.svg" alt="">
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
-                            <div class="feature__icon-circle">
+                            <div class="feature__icon-circle feature__icon-circle--with-line">
                             <img class="feature__svg" src="img/values/icon-graph.svg" alt="">
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
-                            <div class="feature__icon-circle feature__icon-circle--last">
+                            <div class="feature__icon-circle">
                             <img class="feature__svg" src="img/values/icon-star.svg" alt="">
                             </div>
                         </div>
