Create new items-list block for footer

--- a/index.html
+++ b/index.html
@@ -245,81 +245,81 @@
             <section class="l-section l-section--background_dark">
             <div class="l-section__content-wrapper l-section__content-wrapper--margin-small">
                     <div class="l-features-wrapper l-features-wrapper--top-aligned">
-                    <div class="feature">
-                        <h2 class="feature__title">Contact us</h2>
-                        <div class="feature__description">
-                            <div class="feature__icon feature__icon--top" >
+                    <div class="items-list">
+                        <h2 class="items-list__title">Contact us</h2>
+                        <div class="items-list__description">
+                            <div class="items-list__icon items-list__icon--top" >
                                 <img src="img/icons/location.svg" alt="Address">
                             </div>
                             <p>55 Main St.<br>
                                 Toronto, ON<br>
                                 M1H 3A5</p>
                         </div>
-                        <div class="feature__description">
-                            <div class="feature__icon" >
+                        <div class="items-list__description">
+                            <div class="items-list__icon" >
                                 <img src="img/icons/iphone.svg" alt="Phone Number">
                             </div>
                             <p>(416) 555-5252</p>
                         </div>
-                        <div class="feature__description">
-                            <div class="feature__icon" >
+                        <div class="items-list__description">
+                            <div class="items-list__icon" >
                                 <img src="img/icons/email.svg" alt="Email Address">
                             </div>
                             <p>hello@treehouse.com</p>
                         </div>
                     </div>
-                    <div class="feature">
-                        <h2 class="feature__title">Latest posts</h2>
-                        <div class="feature__description">
-                            <div class="feature__icon" >
+                    <div class="items-list">
+                        <h2 class="items-list__title">Latest posts</h2>
+                        <div class="items-list__description">
+                            <div class="items-list__icon" >
                                 <img src="img/icons/news.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Made With Love In Toronto</p></a>
                         </div>
-                        <div class="feature__description">
-                            <div class="feature__icon" >
+                        <div class="items-list__description">
+                            <div class="items-list__icon" >
                                 <img src="img/icons/photo.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Startup News & Emerging Tech</p></a>
                         </div>
-                        <div class="feature__description">
-                            <div class="feature__icon" >
+                        <div class="items-list__description">
+                            <div class="items-list__icon" >
                                 <img src="img/icons/news.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Bitcoin Will Soon Rule The World</p></a>
                         </div>
-                        <div class="feature__description">
-                            <div class="feature__icon" >
+                        <div class="items-list__description">
+                            <div class="items-list__icon" >
                                 <img src="img/icons/news.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Wearable Technology On The Rise</p></a>
                         </div>
-                        <div class="feature__description">
-                            <div class="feature__icon" >
+                        <div class="items-list__description">
+                            <div class="items-list__icon" >
                                 <img src="img/icons/media.svg" alt="Watch video"></div>
                             <a href="#"><p>Learn Web Design In 30 Days!</p></a>
                         </div>
                     </div>
-                    <div class="feature">
-                        <h2 class="feature__title">Latest tweets</h2>
-                        <div class="feature__description">
-                            <div class="feature__icon feature__icon--top" >
+                    <div class="items-list">
+                        <h2 class="items-list__title">Latest tweets</h2>
+                        <div class="items-list__description">
+                            <div class="items-list__icon items-list__icon--top" >
                                 <img src="img/icons/twitter.svg" alt="Tweet">
                             </div>
                             <p><a href="#">Confucius: Life is really simple, 
                                 but we insist on making it 
                                 complicated. </a><br>
-                                <span class="feature__description--hashtag" >#famousquotes</span><br>
-                                <span class="feature__description--small" >8 mins ago</span>
+                                <span class="items-list__description--hashtag" >#famousquotes</span><br>
+                                <span class="items-list__description--small" >8 mins ago</span>
                             </p>
                         </div>
-                        <div class="feature__description">
-                            <div class="feature__icon feature__icon--top" >
+                        <div class="items-list__description">
+                            <div class="items-list__icon items-list__icon--top" >
                                 <img src="img/icons/twitter.svg" alt="Tweet">
                             </div>
                             <p><a href="#">Grab the Free Treehouse web template at FreebiesXpress! </a><br>
-                                <span class="feature__description--hashtag" >#freebies #templates</span><br>
-                                <span class="feature__description--small" >2 days ago</span>
+                                <span class="items-list__description--hashtag" >#freebies #templates</span><br>
+                                <span class="items-list__description--small" >2 days ago</span>
                             </p>
                         </div>
                     </div>
