--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <main>
         <section class="l-section l-section--banner">
             <div class="l-section__content-wrapper">
-                <h2 class="heading__title heading__title--large heading__title--white">Creative Digital<br> Solutions</h2>
-                <p class="heading__subtitle">Proin iaculis purus consequat sem cure. </p>
+                <h2 class="heading__title heading__title--large heading__title--light">Creative Digital<br> Solutions</h2>
+                <p class="heading__subtitle heading__subtitle--light">Proin iaculis purus consequat sem cure. </p>
                 <button type="button" class="banner__button button button--secondary">View Portfolio</button>
            </div>
         </section>
@@ -102,8 +102,8 @@
         
         <section class="l-section l-section--offer">
             <div class="l-section__content-wrapper">
-                <h2 class="heading__title heading__title--white">Just relax <span class="green-text">&</span> <br> let us do the heavy lifting</h2>
-                <p class="heading__subtitle heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                <h2 class="heading__title heading__title--light">Just relax <span class="green-text">&</span> <br> let us do the heavy lifting</h2>
+                <p class="heading__subtitle heading__subtitle--light heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                 <ul class="list">
                     <li class="list__item">Initial Setup & Customizations</li>
                     <li class="list__item">Regular Updates</li>
@@ -227,7 +227,7 @@
             
         <section class="l-section l-section--background_green">
             <div class="l-section__content-wrapper l-section__content-wrapper--margin-small">
-                <h2 class="heading__title heading__title--white">Ready to talk about your next project?</h2>
+                <h2 class="heading__title heading__title--light">Ready to talk about your next project?</h2>
                 <button type="button" class="button">Contact us</button>
             </div>
         </section>
