Separate copyright block

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             </section>
             <section class="l-section l-section--footer">
                 <div class="l-section__content-wrapper l-section__content-wrapper--margin-xsmall">
-                <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
+                <div class="copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials">
                     <a href="#" class="socials__icon socials__icon--twitter">
                         <img src="img/socials/twitter.png" alt="twitter">
