--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </div>
             </section>
         </footer>        
-        <script src="src/global/preloader.js"></script>
+        <script src="src/base/preloader.js"></script>
         <script src="src/blocks/button/button--menu.js"></script>
         <script src="src/blocks/menu/menu__item.js"></script>
 	</body>
