--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </section>
         
         <section class="l-section l-section--background-color_medium l-section--offer">
-            <div class="l-section__content-wrapper">
+            <div class="l-section__content-wrapper l-section__content-wrapper--side">
                 <h2 class="heading__title heading__title--light">Just relax <span class="green-text">&</span> <br> let us do the heavy lifting</h2>
                 <p class="heading__subtitle heading__subtitle--light heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                 <ul class="list">
