Change modifier name

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 </div>
             </section>
             <section class="l-section l-section--footer">
-                <div class="l-wrapper l-wrapper--margin-xsmall">
+                <div class="l-wrapper l-wrapper--margin-tiny">
                 <div class="copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials">
                     <a href="#" class="socials__icon socials__icon--twitter">
