Set features wrapper as a separate block

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h2 class="heading__title">Professional Services</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure</p>
             </div>
-            <div class="l-features-wrapper">
+            <div class="features">
                 <div class="feature">
                     <div class="feature__icon">
                         <img class="feature__svg" src="img/services/icon-heart.svg" alt="">
@@ -165,7 +165,7 @@
             <div class="l-wrapper">
                 <h2 class="heading__title">Culture & values</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat cure. </p>
-                <div class="l-features-wrapper">
+                <div class="features">
                     <div class="feature">
                         <div class="feature__icon">
                             <div class="feature__icon-circle feature__icon-circle--with-line">
@@ -243,7 +243,7 @@
         <footer class="footer">
             <section class="l-section l-section--background-color_dark">
             <div class="l-wrapper l-wrapper--margin-small">
-                    <div class="l-features-wrapper l-features-wrapper--top-aligned">
+                    <div class="features features--top-aligned">
                     <div class="items-list">
                         <h2 class="items-list__title">Contact us</h2>
                         <div class="items-list__description">
