Add alt for pictures in opinion section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure. </p>
                 <div class="opinion">
                     <div class="opinion__picture-background">
-                        <img class="opinion__picture" src="img/opinions/client1.jpeg">
+                        <img class="opinion__picture" src="img/opinions/client1.jpeg" alt="Portrait of Jamie Richardson">
                     </div>
                     <blockquote class="opinion__quotation">
                         <p class="opinion__text">Proin iaculis purus consequat sem cure  digni ssim
@@ -213,7 +213,7 @@
                 </div>
                 <div class="opinion">
                     <div class="opinion__picture-background">
-                       <img class="opinion__picture" src="img/opinions/client2.jpeg">
+                       <img class="opinion__picture" src="img/opinions/client2.jpeg" alt="Portrait of Kim Thompson">
                     </div>
                     <blockquote class="opinion__quotation">
                     <p class="opinion__text">Proin iaculis purus consequat sem cure  digni ssim
