Compress javascript file

--- a/index.html
+++ b/index.html
@@ -345,8 +345,6 @@
                 </div>
             </section>
         </footer>        
-        <script src="src/base/preloader.js"></script>
-        <script src="src/blocks/button/button--menu.js"></script>
-        <script src="src/blocks/menu/menu__item.js"></script>
+        <script src="static/main.js"></script>
 	</body>
 </html>
