--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="preloader__dot"></div>
         </div>
            
-        <header class="header">
-            <div class="header__wrapper">
+        <header class="l-header">
+            <div class="l-header__wrapper">
                 <a href="#" title="Top Page">
-                <div class="header__logo logo">
+                <div class="l-header__logo logo">
                     <div class="logo__pic">
                         <img src="img/header/leaf.png" alt="">
                     </div>
