--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Treehouse  |  Creative Digital Solutions</title>
+		<title>Treehouse | Creative Digital Solutions</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,400,700" rel="stylesheet">
         <link rel="stylesheet" href="static/main.css">
@@ -56,7 +56,7 @@
         <section class="l-section l-section--banner">
             <div class="l-wrapper">
                 <h2 class="heading__title heading__title--large heading__title--light">Creative Digital<br> Solutions</h2>
-                <p class="heading__subtitle heading__subtitle--light">Proin iaculis purus consequat sem cure. </p>
+                <p class="heading__subtitle heading__subtitle--light heading__subtitle--margin_small">Proin iaculis purus consequat sem cure. </p>
                 <button type="button" class="banner__button button button--secondary">View Portfolio</button>
            </div>
         </section>
@@ -102,7 +102,7 @@
         <section class="l-section l-section--background-color_medium l-section--offer">
             <div class="l-wrapper l-wrapper--side">
                 <h2 class="heading__title heading__title--light">Just relax <span class="green-text">&</span> <br> let us do the heavy lifting</h2>
-                <p class="heading__subtitle heading__subtitle--light heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                <p class="heading__subtitle heading__subtitle--light heading__subtitle--small heading__subtitle--margin_tiny">Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                 <ul class="list">
                     <li class="list__item">Initial Setup & Customizations</li>
                     <li class="list__item">Regular Updates</li>
