Add 'go-top' button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
             <div class="preloader__dot"></div>
             <div class="preloader__dot"></div>
         </div>
+      <a href="#home"><span class="go-top">
+        <svg width="26" height="26">
+          <polyline
+            fill="none" 
+            stroke="black" 
+            stroke-width="2" 
+            stroke-linejoin="round" 
+            stroke-linecap="round" 
+            points="1,24 12,1 25,24" 
+          />
+        </svg>
+        </span></a>
            
         <header class="l-header">
             <div class="l-header__wrapper">
