--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="preloader__dot"></div>
             <div class="preloader__dot"></div>
         </div>
-      <a href="#home"><span class="go-top">
+      <a href="#home"><span class="go-top" id="go-top">
         <svg width="26" height="26">
           <polyline
             fill="none" 
@@ -363,5 +363,6 @@
             </section>
         </footer>        
         <script src="static/main.js"></script>
+      <script src="src/blocks/go-top/go-top.js"></script>
 	</body>
 </html>
