Animate showing project section

--- a/index.html
+++ b/index.html
@@ -363,5 +363,6 @@
             </section>
         </footer>        
         <script src="static/main.js"></script>
+      <script src="src/blocks/project/project.js"></script>
 	</body>
 </html>
