--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <main>
         <section class="l-section l-section--banner">
         <span class="l-section__anchor" id="home"></span>
-            <div class="l-wrapper">
-                <h2 class="heading__title heading__title--large heading__title--light">Creative Digital<br> Solutions</h2>
-                <p class="heading__subtitle heading__subtitle--light heading__subtitle--margin_small">Proin iaculis purus consequat sem cure. </p>
+            <div class="banner l-wrapper">
+                <h2 class="banner__title heading__title heading__title--large heading__title--light">Creative Digital<br> Solutions</h2>
+                <p class="banner__subtitle heading__subtitle heading__subtitle--light heading__subtitle--margin_small">Proin iaculis purus consequat sem cure. </p>
                 <button type="button" class="banner__button button button--secondary">View Portfolio</button>
            </div>
         </section>
@@ -363,6 +363,7 @@
             </section>
         </footer>        
         <script src="static/main.js"></script>
+      <script src="src/blocks/banner/banner.js"></script>
       <script src="src/blocks/project/project.js"></script>
 	</body>
 </html>
