--- a/index.html
+++ b/index.html
@@ -363,5 +363,6 @@
             </section>
         </footer>        
         <script src="static/main.js"></script>
+      <script src="src/layout/l-wrapper/l-wrapper.js"></script>
 	</body>
 </html>
