--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Treehouse | Creative Digital Solutions</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,400,700" rel="stylesheet">
         <link rel="stylesheet" href="static/main.css">
