Add and remove aria attributes with Javascript

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </g>
                         </svg>
                     </button>
-                    <ul class="menu__list" id="menu">
+                    <ul class="menu__list menu__list--close" id="menu">
                         <li class="menu__item"><a class="menu__link" href="#home" title="Home page">Home</a></li>
                         <li class="menu__item"><a class="menu__link" href="#about" title="About Treehouse">About</a></li>
                         <li class="menu__item"><a class="menu__link" href="#blog" title="Read our Blog">Blog</a></li>
