Dynamically change aria attributes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 </a>
                 <nav class="menu">
-                    <button type="button" aria-expanded="false" aria-controls="menu" class="menu__button button button--dark button--menu button--close" title="Open Menu">
+                    <button type="button" aria-label="Open" aria-expanded="false" aria-controls="menu" class="menu__button button button--dark button--menu button--close" title="Open Menu">
                         Menu
                          <svg class="button__icon-container" width="26" height="25" xmlns="http://www.w3.org/2000/svg" version="1.1">
                             <g class="button__icon button__icon--open">
