Add link to portfolio button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="banner l-wrapper">
                 <h2 class="banner__title heading__title heading__title--large heading__title--light">Creative Digital<br> Solutions</h2>
                 <p class="banner__subtitle heading__subtitle heading__subtitle--light heading__subtitle--margin_small">Proin iaculis purus consequat sem cure. </p>
-                <button type="button" class="banner__button button button--secondary">View Portfolio</button>
+              <a href="#portfolio"><button type="button" class="banner__button button button--secondary">View Portfolio</button></a>
            </div>
         </section>
         
